tests/errors/syntax/missing_close_parenthesis_signature.odl
main :: () -> void {
    f :: (a: int -> void) -> void